--- a/client/src/pages/SignUp/index.css
+++ b/client/src/pages/SignUp/index.css
@@ -15,17 +15,17 @@
 }
 
 .PhoneInputInput::placeholder {
-  color: #6b7280;
+  color: #ccc;
 }
 
 .PhoneInputInput:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: #6b7280;
+  color: #ccc;
 }
 
 .PhoneInputInput::-ms-input-placeholder {
   /* Microsoft Edge */
-  color: #6b7280;
+  color: #ccc;
 }
 
 .PhoneInputCountry {
