--- a/client/src/pages/Admin/CreateUser/index.css
+++ b/client/src/pages/Admin/CreateUser/index.css
@@ -1,4 +1,4 @@
-.PhoneInput {
+/* .PhoneInput {
   width: 100%;
   padding: 0.5rem 1rem;
   border: 1px solid rgb(229 231 235);
@@ -12,4 +12,4 @@
   background-color: #ffffff !important;
   outline: none;
   border: none;
-}
+} */
