--- a/client/src/pages/SignUp/index.css
+++ b/client/src/pages/SignUp/index.css
@@ -1,7 +1,6 @@
 .PhoneInput {
   width: 100%;
-  padding: 12px 16px;
-  margin-top: 20px;
+  border: 1px solid #333;
   border-radius: 8px;
   background-color: #02071b !important;
   color: white;
